--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,21 +1,46 @@
+# ============================================
 # Build artifacts
+# ============================================
 /target/
 
-# Environment secrets
+# ============================================
+# Environment secrets — NE JAMAIS COMMIT
+# ============================================
 .env
 .env.*
 !.env.example
 
+# ============================================
+# SQLx offline cache
+# Décommenter si vous ne voulez pas versionner le cache offline
+# ============================================
+# .sqlx/
+
+# ============================================
+# Debug symbols (Windows)
+# ============================================
+*.pdb
+
+# ============================================
 # IDE
+# ============================================
 .idea/
 .vscode/
 *.swp
 *.swo
 
+# ============================================
 # OS
+# ============================================
 .DS_Store
 Thumbs.db
 
-# SQLx offline cache (regenerate with `cargo sqlx prepare`)
-# .sqlx/
+# ============================================
+# Vercel
+# ============================================
 .vercel
+
+# ============================================
+# Logs
+# ============================================
+*.log
