--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,1 +1,68 @@
+# ============================================
+# Dependencies
+# ============================================
+node_modules/
+.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# ============================================
+# Next.js build output
+# ============================================
+.next/
+out/
+build/
+dist/
+
+# ============================================
+# TypeScript
+# ============================================
+*.tsbuildinfo
+next-env.d.ts
+
+# ============================================
+# Environment secrets — NE JAMAIS COMMIT
+# ============================================
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env*.local
+# Fichier exemple autorisé :
+!.env.example
+
+# ============================================
+# Tests / Coverage
+# ============================================
+coverage/
+.nyc_output/
+
+# ============================================
+# Misc
+# ============================================
+.DS_Store
+Thumbs.db
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# ============================================
+# IDE
+# ============================================
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# ============================================
+# Vercel
+# ============================================
 .vercel
+
+# ============================================
+# Turbo
+# ============================================
+.turbo/
