--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,6 +1,12 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "ignoreCommand": "git diff --quiet HEAD^ HEAD ./",
+  "functions": {
+    "api/handler.rs": {
+      "runtime": "@vercel-community/rust@0.6.0",
+      "maxDuration": 30
+    }
+  },
   "rewrites": [
     {
       "source": "/(.*)",
